--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    table {
+        @apply w-full border-collapse border border-slate-400;
+    }
+
+    table th, table td{
+        @apply border border-slate-300 p-2;
+    }
+}
