--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 @layer base {
+    body{
+        font-size: 18px;
+    }
+
     table {
         @apply w-full border-collapse border border-slate-400;
     }
